crates/strider-analyze/tests/snapshots/v3__aarch64__memory__pointer_chase.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
